# mis-server

./: const.py  loaders.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml  ci.yml  tests.yml
envs/: test.env
libs/logs/: manager.py
libs/tortoise_manager/: tortoise_manager.py
tests/: config.py  conftest.py
tests/core/a_users/: test_core_users.py
tests/core/b_teams/: test_core_teams.py
tests/core/c_permissions/: test_core_permission.py
tests/core/d_variables/: test_core_variables.py
tests/core/e_tasks/: test_core_tasks.py
tests/core/f_jobs/: test_core_jobs.py
tests/core/g_modules/: test_core_modules.py
tests/unittests/core/: test_auth_svc.py
